# EmulatorEngine

./: .gitignore  CMakeLists.txt  README.md  audio.cpp  audio.h  build.bat  build.sh  gamepad.cpp  gamepad.hpp  main.cpp  state.cpp  state.h  state.hpp  window.cpp  window.h  window.hpp
data/fonts/: Alef-license.txt
emulators/: CMakeLists.txt  emulators.h  emulators.hpp
emulators/bytepusher/: CMakeLists.txt  bytepusher.cpp  bytepusher.h  bytepusher.hpp
emulators/bytepusher/components/: vm.cpp  vm.h  vm.hpp
emulators/chip8/: CMakeLists.txt  chip8.cpp  chip8.h  chip8.hpp
emulators/chip8/components/: graphics.cpp  graphics.h  graphics.hpp  input.cpp  input.h  input.hpp  vm-dynarec.cpp  vm-dynarec.hpp  vm.cpp  vm.h  vm.hpp
emulators/chip8/components/dynarec/: cache.cpp  cache.hpp  vm.cpp  vm.hpp
emulators/chip8/components/interpreter/: vm.cpp  vm.hpp
emulators/gameboy/: CMakeLists.txt  gameboy.cpp  gameboy.h  gameboy.hpp
emulators/gameboy/components/: components.h  components.hpp
emulators/gameboy/components/bios/: bios.cpp  bios.h  bios.hpp
emulators/gameboy/components/bus/: bus.cpp  bus.h  bus.hpp
emulators/gameboy/components/cpu/: cpu.cpp  cpu.h  cpu.hpp
emulators/gameboy/components/gpu/: gpu.cpp  gpu.h  gpu.hpp
emulators/gameboy/components/joypad/: joypad.cpp  joypad.hpp
emulators/gameboy/components/pus/: cpu.cpp  gpu.cpp  gpu.h
emulators/gameboy/components/ram/: ram.cpp  ram.h  ram.hpp
emulators/gameboy/components/rom/: bios.cpp  bios.h  rom.cpp  rom.h  rom.hpp
emulators/gameboy/components/rom/MBCs/: mbc.hpp  mbc0.cpp  mbc0.hpp  mbc1.cpp  mbc1.hpp  mbc3.cpp  mbc3.hpp  mbc5.cpp  mbc5.hpp
emulators/gameboy/components/sound/: sound.cpp  sound.hpp
emulators/gameboy/components/timer/: timer.cpp  timer.hpp
emulators/nes/: CMakeLists.txt  nes.cpp  nes.h  nes.hpp
emulators/nes/components/bus/: bus.cpp  bus.h  bus.hpp
emulators/nes/components/cpu/: cpu.cpp  cpu.h  cpu.hpp
emulators/nes/components/rom/: rom.cpp  rom.hpp
gui/: CMakeLists.txt  font.cpp  font.h  gui.h  gui.hpp  text.h
gui/text/: font.cpp  text.cpp  text.hpp
menus/: CMakeLists.txt  main_menu.cpp  main_menu.h  main_menu.hpp
src/: main.cpp
src/emulators/: emulator.h
src/emulators/bytepusher/: bytepusher.cpp  bytepusher.h
src/emulators/chip8/: chip8.cpp  chip8.h
src/engine/: audio.cpp  audio.h  renderer.cpp  renderer.h  window.cpp  window.h
src/window/: renderer.cpp  renderer.h  window.cpp  window.h
